yaml/ELK/elasticsearch-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-exporter
  namespace: services
  labels:
    app: elasticsearch
spec:
  selector:
    app: elasticsearch
  ports:
    - name: metrics
      port: 9114
      targetPort: 9114
